--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');*/
+
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Roboto:wght@300;400;500;700&display=swap');
 
 :root{
     --color-primary: black;
     --color-secondary: white;
     --color-tertiary: rgb(135,206,235);
-    --body-font-family: 'Roboto', sans-serif;
-    --body-font-size:1rem;
+    --body-font-family: 'EB Garamond', serif;
+    --body-font-size:2rem;
     --body-font-weight:400;
     --body-line-height: 1.5;
 }
@@ -15,7 +17,7 @@
 }*/
 
 h1{
-    font-size: 1.3125rem;
+    font-size: 1.5rem;
     font-weight: normal;
 }
 
